# cf-shap

./: .gitignore  Example.html  Example.ipynb  README.md  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: python-app.yml
src/cfshap/: __init__.py  base.py  trend.py
src/cfshap/attribution/: __init__.py  composite.py  shap.py
src/cfshap/background/: __init__.py  counterfactual_adapter.py  opposite.py
src/cfshap/counterfactuals/: __init__.py  composition.py  knn.py  project.py
src/cfshap/evaluation/: __init__.py
src/cfshap/evaluation/attribution/: __init__.py  _basic.py
src/cfshap/evaluation/attribution/induced_counterfactual/: __init__.py  _actionability.py  _utils.py
src/cfshap/evaluation/counterfactuals/: plausibility.py
src/cfshap/utils/: __init__.py  _python.py  _utils.py  project.py  tree.py
src/cfshap/utils/parallel/: __init__.py  batch.py
src/cfshap/utils/preprocessing/: __init__.py
src/cfshap/utils/preprocessing/scaling/: __init__.py  madscaler.py  multiscaler.py  quantiletransformer.py
src/cfshap/utils/random/: __init__.py  _stability.py
src/emutils/: __init__.py  human.py  imports.py  latex.py
src/emutils/datasets/: __init__.py  _datasets.py  kaggle.py
src/emutils/datasets/preprocessing/: _utils.py  heloc.py  lendingclub.py  winequality.py
src/emutils/file/: __init__.py  _json.py  _pickle.py
src/emutils/geometry/: cone.py  metrics.py  utils.py
src/emutils/ipython/: _utils.py
src/emutils/model/: __init__.py  train.py  wrappers.py
src/emutils/model/evaluate/: __init__.py  metrics.py
src/emutils/model/tune/: __init__.py  _threshold.py
src/emutils/monkeys/: __init__.py
src/emutils/parallel/: batch.py  utils.py
src/emutils/plt/: __init__.py  style.py
src/emutils/preprocessing/: __init__.py  _convert.py  madscaler.py  multiscaler.py  quantiletransformer.py
src/emutils/profiling/: __init__.py  time.py
src/emutils/random/: _sample.py  _stability.py
src/emutils/statistics/: __init__.py  _bootstrap.py
src/emutils/utils/: __init__.py  _utils.py
tests/: test_usage.py
