[metadata]
name = cfshap
version = 0.0.1
author = Emanuele Albini

description = Counterfactual SHAP: a framework for counterfactual feature importance
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jpmorganchase/cf-shap
project_urls =
    Source Code = https://github.com/jpmorganchase/cf-shap
    Bug Tracker = https://github.com/jpmorganchase/cf-shap/issues
    Author Website = https://www.emanuelealbini.com

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent

keywords =
    XAI
    Explainability
    Explainable AI
    Counterfactuals
    Algorithmic Recourse
    Contrastive Explanations
    Feature Importance
    Feature Attribution
    Machine Learning
    Shapley values
    SHAP
    FAccT22

platform = any

[options]
include_package_data = True
package_dir = 
    = src
packages = find:

python_requires = >=3.6
install_requires =
    numpy>=1.19.2
    scipy>=1.5.2
    pandas>=1.1.5
    networkx>=2.5.1
    scikit-learn>=0.24.2
    xgboost>=1.3.3
    matplotlib>=3.3.4
    seaborn>=0.11.1
    joblib>=1.0.1
    nbconvert>=5.6.1
    humanize>=3.10.0
    hyperopt>=0.2.5
    tqdm>=4.61
    numba>=0.51.2
    kaggle>=1.5
    beautifulsoup4>=4
    lime==0.2.0.1
    shap==0.39.0
    cached_property
    dataclasses
    typing_extensions


[options.packages.find]
where = src
