[metadata]
name = cfshap
version = 0.0.2
author = Emanuele Albini

description = Counterfactual SHAP: a framework for counterfactual feature importance
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jpmorganchase/cf-shap
project_urls =
    Source Code = https://github.com/jpmorganchase/cf-shap
    Bug Tracker = https://github.com/jpmorganchase/cf-shap/issues
    Author Website = https://www.emanuelealbini.com

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent

keywords =
    XAI
    Explainability
    Explainable AI
    Counterfactuals
    Algorithmic Recourse
    Contrastive Explanations
    Feature Importance
    Feature Attribution
    Machine Learning
    Shapley values
    SHAP
    FAccT22

platform = any

[options]
include_package_data = True
package_dir = 
    = src
packages = find:

python_requires = >=3.6
install_requires =
    numpy
    scipy
    pandas
    scikit-learn
    joblib
    tqdm
    numba>=0.51.2
    kaggle
    beautifulsoup4>=4
    lime==0.2.0.1
    shap==0.39.0
    cached_property
    dataclasses
    typing_extensions

[options.extras_require]
test = pytest; xgboost; scikit-learn

[options.packages.find]
where = src


[flake8]
max-line-length = 200
exclude = .git,__pycache__,docs,old,build,dist,venv
# Blank lines, trailins spaces, etc.
extend-ignore = W29,W39
per-file-ignores =
    # imported but unused / unable to detect undefined names
    __init__.py: F401,F403
    # imported but unused  / module level import not at top of file
    src/emutils/imports.py: F401, E402